[package]
name = "kmonadx"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
structopt = "0.3"
ahash = "0.7"
color-eyre = { version = "0.5", default-features = false }
codespan-reporting = "0.11"
phf = { version = "0.9", features = ["macros"] }
petgraph = "0.6"
bimap = "0.6.1"
